--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,10 @@
   padding: 0;
 }
 
+body {
+    background: url(/assets/images/Background.jpeg);
+}
+
 .banner {
   width: 100%;
   height: 100vh;
@@ -24,9 +28,9 @@
 
 @keyframes autoRun {
     from {
-        transform: perspective(1000px) rotateY(0deg);
+        transform: perspective(1000px) rotateX(-16deg) rotateY(0deg);
     }to {
-        transform: perspective(1000px) rotateY(360deg);
+        transform: perspective(1000px) rotateX(-16deg) rotateY(360deg);
     }
 }
 
