--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,9 +28,9 @@ body {
 
 @keyframes autoRun {
     from {
-        transform: perspective(1000px) rotateX(-16deg) rotateY(0deg);
+        transform: perspective(1000px) rotateX(-10deg) rotateY(0deg);
     }to {
-        transform: perspective(1000px) rotateX(-16deg) rotateY(360deg);
+        transform: perspective(1000px) rotateX(-10deg) rotateY(360deg);
     }
 }
 
@@ -42,7 +42,15 @@ body {
 }
 
 .banner .slider .item img {
+  transition: 0.5s;  
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
+
+.banner .slider .item img:hover {
+    width: 110%;
+    height: 110%;
+    object-fit: cover;
+    transition: 0.5s;
+  }
