--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background: url(/assets/images/Background.jpeg);
+  background: url(/assets/images/Background.jpeg);
 }
 
 .banner {
@@ -23,15 +23,16 @@ body {
   left: calc(50% - 100px);
   transform-style: preserve-3d;
   transform: perspective(1000px);
-  animation: autoRun 20s linear infinite;
+  /* animation: autoRun 20s linear infinite; */
 }
 
 @keyframes autoRun {
-    from {
-        transform: perspective(1000px) rotateX(-10deg) rotateY(0deg);
-    }to {
-        transform: perspective(1000px) rotateX(-10deg) rotateY(360deg);
-    }
+  from {
+    transform: perspective(1000px) rotateX(-10deg) rotateY(0deg);
+  }
+  to {
+    transform: perspective(1000px) rotateX(-10deg) rotateY(360deg);
+  }
 }
 
 .banner .slider .item {
@@ -39,18 +40,36 @@ body {
   inset: 0 0 0 0;
   transform: rotateY(calc((var(--position) - 1) * (360 / var(--quantity)) * 1deg))
     translateZ(550px);
+    overflow: hidden;
 }
 
 .banner .slider .item img {
-  transition: 0.5s;  
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 
-.banner .slider .item img:hover {
-    width: 110%;
-    height: 110%;
-    object-fit: cover;
-    transition: 0.5s;
-  }
+.banner .slider .item:hover {
+  transition: 5s;
+  width: 110%;
+  height: 110%;
+}
+
+.banner .slider .item span {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  font-size: 18px;
+  padding: 10px;
+  transform: translateY(100%); /* Inicialmente escondido abaixo da imagem */
+  transition: transform 0.5s ease; /* Animação suave */
+  z-index: 1; /* Sobrepõe a imagem */
+}
+
+.banner .slider .item:hover span {
+  transform: translateY(0); /* Traz o span para a área visível */
+}
